src/views/Layout/WebPlayer/style.scss
:root {
  --width: 200px;
  --sidebar-resizer-width: 9px;
  --sidebar-resizer-width-negative: -9px;
}

.web-player-container {
  @apply grid w-full h-screen min-w-web-player;
  grid-template-columns: calc(var(--width) + var(--sidebar-resizer-width)) calc(
      100% - calc(var(--width) + var(--sidebar-resizer-width))
    );
  grid-template-rows: 80px 1fr 90px;

  * {
    @apply select-none;
  }

  .header-container {
    grid-column: 2;
    @apply bg-green-300;
  }

  .main-section-container {
    @apply bg-purple-500;
  }

  .sidebar-container {
    grid-row: 1/3;
    @apply bg-black-default relative;

    &.-resizing {
      &,
      * {
        @apply cursor-col-resize;
      }
    }

    .resizer {
      width: var(--sidebar-resizer-width);
      @apply absolute right-0 top-0 h-full cursor-col-resize;
    }

    .resizer:hover {
      background: linear-gradient(hsla(0, 0%, 100%, 0.3), hsla(0, 0%, 100%, 0.3)) no-repeat 50%/1px 100%;
      right: calc(var(--sidebar-resizer-width-negative) / 2);
    }
  }

  .now-playing-bar-container {
    grid-column: 1/3;
    grid-row: 3;
    @apply bg-blue-100;
  }
}

